<resources>
    <string name="app_name">App Portfolio</string>
    <string name="label">My Nanodegree Apps</string>

    <string name="button_message">This button will launch my %1$s project</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="make_your_app_material">Make Your App Material</string>
    <string name="go_ubiquitous">Go Ubiquitous</string>
    <string name="capstone">Capstone</string>
</resources>
