<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorBackground"
    tools:context="me.appfolio.appportfolio.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/label_margin"
            android:layout_marginRight="@dimen/label_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:textColor="@color/colorText"
            android:textSize="@dimen/label_text_size"
            android:text="@string/label" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_popular_movies"
            android:text="@string/popular_movies"
            android:onClick="buttonClick"
            style="@style/ButtonNormal" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_stock_hawk"
            android:text="@string/stock_hawk"
            android:onClick="buttonClick"
            style="@style/ButtonNormal" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_build_it_bigger"
            android:text="@string/build_it_bigger"
            android:onClick="buttonClick"
            style="@style/ButtonNormal" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_make_your_app_material"
            android:text="@string/make_your_app_material"
            android:onClick="buttonClick"
            style="@style/ButtonNormal" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_go_ubiquitous"
            android:text="@string/go_ubiquitous"
            android:onClick="buttonClick"
            style="@style/ButtonNormal" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_capstone_my_own_app"
            android:text="@string/capstone"
            android:onClick="buttonClick"
            style="@style/ButtonNormal" />
    </LinearLayout>
</ScrollView>
